--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
   <label for="initial">Počáteční investice (Kč)</label>
   <input type="number" id="initial" placeholder="Např. 10000">
 
-  <label for="monthly">Měēíční vklad (Kč)</label>
+  <label for="monthly">Měsíční vklad (Kč)</label>
   <input type="number" id="monthly" placeholder="Např. 1000">
 
   <label for="years">Počet let</label>
   <input type="number" id="years" placeholder="Např. 10">
 
-  <label for="interest">Roční úročí (%)</label>
+  <label for="interest">Roční úročení (%)</label>
   <input type="number" id="interest" placeholder="Např. 7">
 
   <button onclick="calculateCompoundInterest()">Spočítat</button>
@@ -81,21 +81,30 @@
       const initial = parseFloat(document.getElementById('initial').value) || 0;
       const monthly = parseFloat(document.getElementById('monthly').value) || 0;
       const years = parseInt(document.getElementById('years').value) || 0;
-      const interest = parseFloat(document.getElementById('interest').value) / 100 || 0;
+      const interest = parseFloat(document.getElementById('interest').value);
 
-      let futureValue = initial * Math.pow(1 + interest / 12, 12 * years);
-      for (let i = 1; i <= years * 12; i++) {
-        futureValue += monthly * Math.pow(1 + interest / 12, 12 * years - i);
+      if (isNaN(interest)) {
+        alert("Zadej prosím platné roční úročení.");
+        return;
       }
 
-      const totalInvested = initial + (monthly * 12 * years);
+      const monthlyRate = interest / 100 / 12;
+      const months = years * 12;
+
+      let futureValue = initial * Math.pow(1 + monthlyRate, months);
+
+      for (let i = 1; i <= months; i++) {
+        futureValue += monthly * Math.pow(1 + monthlyRate, months - i);
+      }
+
+      const totalInvested = initial + (monthly * months);
       const profit = futureValue - totalInvested;
 
       document.getElementById('result').style.display = 'block';
       document.getElementById('result').innerHTML = `
-        <strong>Konečná částka:</strong> ${futureValue.toFixed(2)} Kč<br>
-        <strong>Celkem vloženo:</strong> ${totalInvested.toFixed(2)} Kč<br>
-        <strong>Zisk:</strong> ${profit.toFixed(2)} Kč
+        <strong>Konečná částka:</strong> ${futureValue.toLocaleString('cs-CZ', {minimumFractionDigits: 2, maximumFractionDigits: 2})} Kč<br>
+        <strong>Celkem vloženo:</strong> ${totalInvested.toLocaleString('cs-CZ', {minimumFractionDigits: 2, maximumFractionDigits: 2})} Kč<br>
+        <strong>Zisk:</strong> ${profit.toLocaleString('cs-CZ', {minimumFractionDigits: 2, maximumFractionDigits: 2})} Kč
       `;
     }
   </script>
