--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
   </div>
 
   <div class="info-box">
-    <strong>📌 Akciový trh přináší zisk průměrně 6–8 % ročně.*</strong><br>
+    <strong> Akciový trh přináší zisk průměrně 6–8 % ročně.*</strong><br>
     Vyber, jak dlouho chceš investovat a spočítej si, kolik peněz můžeš získat!<br><br>
-    <small>*Uvedené zhodnocení vychází z historických výnosů a nepředstavuje záruku budoucích výsledků. Investování je spojeno s rizikem. Tento web neslouží jako investiční poradenství. Autorka není finanční poradkyní.</small>
+    <small>*Uvedené zhodnocení vychází z historických výnosů a nepředstavuje záruku budoucích výsledků. 
+Investování je spojeno s rizikem. Tento web neslouží jako investiční poradenství. Autorka není finanční poradkyní.</small>
   </div>
 
   <script>
