--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kalkulačka složeného úročení</title>
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <audio id="meowSound" src="https://www.fesliyanstudios.com/play-mp3/6411" preload="auto"></audio>
+  <audio id="meowSound" src="cat-meow-8-fx-306184.mp3" preload="auto"></audio>
   <style>
     body {
       font-family: 'League Spartan', sans-serif;
