--- a/index.html
+++ b/index.html
@@ -40,21 +40,25 @@
       line-height: 2rem;
     }
     .tooltip .tooltip-text {
-      visibility: hidden;
-      width: 240px;
-      background-color: #f5a623;
-      color: white;
-      text-align: center;
-      border-radius: 0.5rem;
-      padding: 0.75rem;
-      position: absolute;
-      z-index: 1;
-      bottom: 125%;
-      left: 50%;
-      margin-left: -120px;
-      opacity: 0;
-      transition: opacity 0.3s;
-      font-size: 0.9rem;
+  visibility: hidden;
+  max-width: 90vw;
+  width: max-content;
+  min-width: 180px;
+  background-color: #f5a623;
+  color: white;
+  text-align: center;
+  border-radius: 0.5rem;
+  padding: 0.75rem;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 0.9rem;
+  box-sizing: border-box;
+  word-wrap: break-word;
     }
     .tooltip:hover .tooltip-text {
       visibility: visible;
