--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
       font-size: 2rem;
       line-height: 2rem;
     }
-    .tooltip .tooltip-text {
+ .tooltip .tooltip-text {
   visibility: hidden;
-  max-width: 90vw;
-  width: max-content;
-  min-width: 180px;
+  width: 90vw;
+  max-width: 280px;
   background-color: #f5a623;
   color: white;
   text-align: center;
@@ -58,8 +57,7 @@
   transition: opacity 0.3s;
   font-size: 0.9rem;
   box-sizing: border-box;
-  word-wrap: break-word;
-    }
+}
     .tooltip:hover .tooltip-text {
       visibility: visible;
       opacity: 1;
