--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   transition: opacity 0.3s;
   font-size: 0.9rem;
   box-sizing: border-box;
+  line-height: 1.2;
 }
     .tooltip:hover .tooltip-text {
       visibility: visible;
