--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
     canvas {
       width: 100% !important;
       height: auto !important;
+      border: 1px solid #eee;
+      border-radius: 0.75rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.04);
     }
     .footer {
       margin-top: 2rem;
@@ -172,7 +175,19 @@
   <div class="result" id="result" style="display:none;"></div>
 
   <div class="chart-container">
-  <canvas id="growthChart"></canvas>
+    <canvas id="growthChart"></canvas>
+  </div>
+
+  <div class="footer">
+    Vygenerováno pomocí Kalkulačky od <strong>@nebudsvorc</strong> — &copy; Nikola Morla | <a href="https://nikolamorla.cz" target="_blank">nikolamorla.cz</a>
+  </div>
+
+  <div class="info-box">
+    <strong>Akciový trh přináší zisk průměrně 6–8 % ročně.*</strong><br>
+    Vyber, jak dlouho chceš investovat a spočítej si, kolik peněz můžeš získat!<br><br>
+    <small>*Uvedené zhodnocení vychází z historických výnosů a nepředstavuje záruku budoucích výsledků.<br>Investování je vždy spojeno s rizikem. Tento web neslouží jako investiční poradenství a autorka není finanční poradkyní.</small>
+  </div>
+
   <script>
     const ctx = document.getElementById('growthChart').getContext('2d');
     let chart = new Chart(ctx, {
@@ -255,4 +270,3 @@
     }
   </script>
 </body>
-</html>
