--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kalkulačka složeného úročení | Nebuď švorc</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js">function playMeow() {
+  const icon = document.querySelector('.tooltip');
+  document.getElementById('meowSound').play();
+  icon.classList.add('meow-animate');
+  const sparkle = document.createElement('div');
+  sparkle.classList.add('sparkle');
+  icon.appendChild(sparkle);
+  setTimeout(() => {
+    icon.classList.remove('meow-animate');
+    sparkle.remove();
+  }, 800);
+}
+  </script>
   <audio id="meowSound" src="cat-meow-8-fx-306184.mp3" preload="auto"></audio>
   <style>
     body {
@@ -38,6 +50,7 @@
       font-size: 1rem;
     }
     .tooltip {
+      transition: transform 0.3s ease;
       display: inline-block;
       position: relative;
       cursor: help;
@@ -146,7 +159,33 @@
       margin-top: 2rem;
       font-size: 2.4rem;
     }
-  </style>
+      @keyframes meowWiggle {
+      0% { transform: rotate(0deg); }
+      25% { transform: rotate(15deg); }
+      50% { transform: rotate(-15deg); }
+      75% { transform: rotate(10deg); }
+      100% { transform: rotate(0deg); }
+    }
+    .meow-animate {
+      animation: meowWiggle 0.6s ease;
+    }
+      @keyframes sparkle {
+      0% { opacity: 0.8; transform: scale(0.9) rotate(0deg); }
+      50% { opacity: 1; transform: scale(1.3) rotate(180deg); }
+      100% { opacity: 0; transform: scale(0.9) rotate(360deg); }
+    }
+    .sparkle {
+      position: absolute;
+      top: -10px;
+      left: 10px;
+      width: 20px;
+      height: 20px;
+      background: radial-gradient(circle, #ffe6f0 0%, #ffccdd 100%);
+      border-radius: 50%;
+      animation: sparkle 0.8s ease-out forwards;
+      pointer-events: none;
+    }
+</style>
 </head>
 <body>
   <h1>Kalkulačka složeného úročení</h1>
@@ -162,7 +201,7 @@
   <input type="number" id="years" placeholder="Např. 30" value="30">
 
   <label for="interest">Roční úročení (% p.a.)
-    <span class="tooltip">🐱
+    <span class="tooltip" onclick="playMeow()">🐱
       <span class="tooltip-text">
         Zkratka p.a. pochází z latinského „per annum“, což znamená ročně. Používá se u úrokových sazeb.
       </span>
