--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kalkulačka složeného úročení | Nebuď švorc</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js">function playMeow() {
-  const icon = document.querySelector('.tooltip');
-  document.getElementById('meowSound').play();
-  icon.classList.add('meow-animate');
-  const sparkle = document.createElement('div');
-  sparkle.classList.add('sparkle');
-  icon.appendChild(sparkle);
-  setTimeout(() => {
-    icon.classList.remove('meow-animate');
-    sparkle.remove();
-  }, 800);
-}
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  function playMeow() {
+    const icon = document.querySelector('.tooltip');
+    document.getElementById('meowSound').play();
+    icon.classList.add('meow-animate');
+    const sparkle = document.createElement('div');
+    sparkle.classList.add('sparkle');
+    icon.appendChild(sparkle);
+    setTimeout(() => {
+      icon.classList.remove('meow-animate');
+      sparkle.remove();
+    }, 800);
+  }
+</script>
   <audio id="meowSound" src="cat-meow-8-fx-306184.mp3" preload="auto"></audio>
   <style>
     body {
@@ -309,3 +311,4 @@
     }
   </script>
 </body>
+  </html>
