--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </style>
 </head>
 <body>
-  <h1>Kalkulačka složeného úročení</h1>
+  <h1>Spočítej si investice!</h1>
   <p class="subtitle">Začni tam, kde jsi. Použij to, co máš. Vytvoř to, co chceš.</p>
 
   <label for="initial">Počáteční investice (Kč)</label>
