--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kalkulačka složeného úročení | Nebuď švorc</title>
+  <title>Kalkulačka složeného úrčení | Nebuď švorc</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #fffaf7;
+      background-color: #fffaf7; /* ladí s hlavním webem */
       color: #3a3a3a;
       margin: 0;
       padding: 2rem 1rem;
@@ -19,15 +19,15 @@
       max-width: 440px;
       margin: 0 auto;
       padding: 2rem 1.5rem;
-      background-color: #fff;
+      background-color: #fffaf7; /* sjednoceno s pozadím webu */
       border-radius: 1rem;
-      box-shadow: 0 0 30px rgba(244, 122, 92, 0.25);
+      box-shadow: 0 0 30px rgba(244, 122, 92, 0.15);
     }
 
     h1 {
       font-family: 'DM Serif Display', serif;
       color: #f47a5c;
-      font-size: 2.4rem;
+      font-size: 2.2rem;
       margin-bottom: 0.5rem;
       text-align: center;
     }
@@ -46,37 +46,6 @@
       font-size: 1rem;
     }
 
-    .tooltip {
-      transition: transform 0.3s ease;
-      display: inline-block;
-      position: relative;
-      cursor: help;
-      font-size: 1.2rem;
-    }
-
-    .tooltip .tooltip-text {
-      visibility: hidden;
-      width: 280px;
-      background-color: #f47a5c;
-      color: white;
-      text-align: center;
-      border-radius: 0.5rem;
-      padding: 0.75rem;
-      position: absolute;
-      z-index: 1;
-      bottom: 125%;
-      left: 50%;
-      margin-left: -140px;
-      opacity: 0;
-      transition: opacity 0.3s;
-      font-size: 0.9rem;
-    }
-
-    .tooltip:hover .tooltip-text {
-      visibility: visible;
-      opacity: 1;
-    }
-
     input {
       width: 100%;
       padding: 0.7rem;
@@ -84,9 +53,6 @@
       border-radius: 0.4rem;
       font-size: 1rem;
       box-sizing: border-box;
-    }
-
-    input#interest {
       background-color: #fffef5;
     }
 
@@ -116,7 +82,7 @@
       text-align: center;
     }
 
-    .result .highlight {
+    .highlight {
       font-size: 1.6rem;
       color: #f85b3f;
       background-color: #fff2e6;
@@ -139,61 +105,12 @@
     canvas {
       width: 100% !important;
       height: 100% !important;
-      border: 1px solid #eee;
       border-radius: 0.75rem;
-    }
-
-    .footer {
-      margin-top: 2rem;
-      font-size: 0.85rem;
-      text-align: center;
-      color: #aaa;
-    }
-
-    .info-box {
-      margin-top: 2.5rem;
-      padding: 1rem;
-      background-color: #fffaf0;
-      border-left: 4px solid #f47a5c;
-      border-radius: 0.4rem;
-      font-size: 0.9rem;
-      line-height: 1.3rem;
-      color: #555;
-    }
-
-    .meow-animate {
-      animation: meowWiggle 0.6s ease;
-    }
-
-    @keyframes meowWiggle {
-      0% { transform: rotate(0deg); }
-      25% { transform: rotate(15deg); }
-      50% { transform: rotate(-15deg); }
-      75% { transform: rotate(10deg); }
-      100% { transform: rotate(0deg); }
-    }
-
-    @keyframes sparkle {
-      0% { opacity: 0.8; transform: scale(0.9) rotate(0deg); }
-      50% { opacity: 1; transform: scale(1.3) rotate(180deg); }
-      100% { opacity: 0; transform: scale(0.9) rotate(360deg); }
-    }
-
-    .sparkle {
-      position: absolute;
-      top: -10px;
-      left: 10px;
-      width: 20px;
-      height: 20px;
-      background: radial-gradient(circle, #ffe6f0 0%, #ffccdd 100%);
-      border-radius: 50%;
-      animation: sparkle 0.8s ease-out forwards;
-      pointer-events: none;
+      border: 1px solid #eee;
     }
   </style>
 </head>
 <body>
-  <audio id="meowSound" src="cat-meow-8-fx-306184.mp3" preload="auto"></audio>
   <div class="shadow-box">
     <h1>Spočítej si investice</h1>
     <p class="subtitle">Začni tam, kde jsi. Použij to, co máš. Vytvoř to, co chceš.</p>
@@ -207,48 +124,18 @@
     <label for="years">Počet let</label>
     <input type="number" id="years" placeholder="Např. 30" value="30">
 
-    <label for="interest">Roční úročení (% p.a.)
-      <span class="tooltip" onclick="playMeow()">🐱
-        <span class="tooltip-text">
-          Zkratka p.a. pochází z latinského „per annum“, což znamená ročně. Používá se u úrokových sazeb.
-        </span>
-      </span>
-    </label>
+    <label for="interest">Roční úrčení (% p.a.)</label>
     <input type="number" id="interest" placeholder="Např. 7" value="7">
 
-    <button onclick="calculateCompoundInterest()">Spočítat</button>
+    <button onclick="calculateCompoundInterest()">✅ Spočítat</button>
 
     <div class="result" id="result" style="display:none;"></div>
-
     <div class="chart-container">
       <canvas id="growthChart"></canvas>
-    </div>
-
-    <div class="footer">
-      Vygenerováno pomocí Kalkulačky od <strong>@nebudsvorc</strong> — &copy; Nikola Morla | <a href="https://nikolamorla.cz" target="_blank">nikolamorla.cz</a>
-    </div>
-
-    <div class="info-box">
-      <strong>Akciový trh přináší zisk průměrně 6–8 % ročně.*</strong><br>
-      Vyber, jak dlouho chceš investovat a spočítej si, kolik peněz můžeš získat!<br><br>
-      <small>*Uvedené zhodnocení vychází z historických výnosů a nepředstavuje záruku budoucích výsledků.<br>Investování je vždy spojeno s rizikem. Tento web neslouží jako investiční poradenství a autorka není finanční poradkyní.</small>
     </div>
   </div>
 
   <script>
-    function playMeow() {
-      const icon = document.querySelector('.tooltip');
-      document.getElementById('meowSound').play();
-      icon.classList.add('meow-animate');
-      const sparkle = document.createElement('div');
-      sparkle.classList.add('sparkle');
-      icon.appendChild(sparkle);
-      setTimeout(() => {
-        icon.classList.remove('meow-animate');
-        sparkle.remove();
-      }, 800);
-    }
-
     const ctx = document.getElementById('growthChart').getContext('2d');
     let chart = new Chart(ctx, {
       type: 'bar',
@@ -288,7 +175,7 @@
       const interest = parseFloat(document.getElementById('interest').value);
 
       if (isNaN(interest)) {
-        alert("Zadej prosím platné roční úročení.");
+        alert("Zadej prosím platné roční úrčení.");
         return;
       }
 
