--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #fffaf7; /* ladí s hlavním webem */
+      background-color: #fdfaf7; /* sladěno s pozadím Google Sites */
       color: #3a3a3a;
       margin: 0;
       padding: 2rem 1rem;
@@ -19,7 +19,7 @@
       max-width: 440px;
       margin: 0 auto;
       padding: 2rem 1.5rem;
-      background-color: #fffaf7; /* sjednoceno s pozadím webu */
+      background-color: #fdfaf7; /* sjednoceno s pozadím rodičovské stránky */
       border-radius: 1rem;
       box-shadow: 0 0 30px rgba(244, 122, 92, 0.15);
     }
@@ -95,7 +95,7 @@
 
     .chart-container {
       margin-top: 2rem;
-      background: #fffaf7;
+      background: #fdfaf7;
       padding: 1rem;
       border-radius: 1rem;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
