--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #ffffff; /* sladěno s pozadím Google Sites */
+      background-color: #ffffff;
       color: #3a3a3a;
       margin: 0;
       padding: 2rem 1rem;
@@ -19,7 +19,7 @@
       max-width: 440px;
       margin: 0 auto;
       padding: 2rem 1.5rem;
-      background-color: #ffffff; /* sjednoceno s pozadím rodičovské stránky */
+      background-color: #ffffff;
       border-radius: 1rem;
       box-shadow: 0 0 30px rgba(244, 122, 92, 0.15);
     }
@@ -95,7 +95,7 @@
 
     .chart-container {
       margin-top: 2rem;
-      background: #fdfaf7;
+      background: #ffffff;
       padding: 1rem;
       border-radius: 1rem;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
@@ -108,9 +108,86 @@
       border-radius: 0.75rem;
       border: 1px solid #eee;
     }
+
+    .tooltip {
+      transition: transform 0.3s ease;
+      display: inline-block;
+      position: relative;
+      cursor: help;
+      font-size: 1.2rem;
+      line-height: 1.2rem;
+    }
+
+    .tooltip .tooltip-text {
+      visibility: hidden;
+      width: 280px;
+      background-color: #f47a5c;
+      color: white;
+      text-align: center;
+      border-radius: 0.5rem;
+      padding: 0.75rem;
+      position: absolute;
+      z-index: 1;
+      bottom: 125%;
+      left: 50%;
+      margin-left: -140px;
+      opacity: 0;
+      transition: opacity 0.3s;
+      font-size: 0.9rem;
+    }
+
+    .tooltip:hover .tooltip-text {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    @keyframes meowWiggle {
+      0% { transform: rotate(0deg); }
+      25% { transform: rotate(15deg); }
+      50% { transform: rotate(-15deg); }
+      75% { transform: rotate(10deg); }
+      100% { transform: rotate(0deg); }
+    }
+
+    .meow-animate {
+      animation: meowWiggle 0.6s ease;
+    }
+
+    @keyframes sparkle {
+      0% { opacity: 0.8; transform: scale(0.9) rotate(0deg); }
+      50% { opacity: 1; transform: scale(1.3) rotate(180deg); }
+      100% { opacity: 0; transform: scale(0.9) rotate(360deg); }
+    }
+
+    .sparkle {
+      position: absolute;
+      top: -10px;
+      left: 10px;
+      width: 20px;
+      height: 20px;
+      background: radial-gradient(circle, #ffe6f0 0%, #ffccdd 100%);
+      border-radius: 50%;
+      animation: sparkle 0.8s ease-out forwards;
+      pointer-events: none;
+    }
   </style>
+  <script>
+    function playMeow() {
+      const icon = document.querySelector('.tooltip');
+      document.getElementById('meowSound').play();
+      icon.classList.add('meow-animate');
+      const sparkle = document.createElement('div');
+      sparkle.classList.add('sparkle');
+      icon.appendChild(sparkle);
+      setTimeout(() => {
+        icon.classList.remove('meow-animate');
+        sparkle.remove();
+      }, 800);
+    }
+  </script>
 </head>
 <body>
+  <audio id="meowSound" src="cat-meow-8-fx-306184.mp3" preload="auto"></audio>
   <div class="shadow-box">
     <h1>Spočítej si investice</h1>
     <p class="subtitle">Začni tam, kde jsi. Použij to, co máš. Vytvoř to, co chceš.</p>
@@ -124,7 +201,13 @@
     <label for="years">Počet let</label>
     <input type="number" id="years" placeholder="Např. 30" value="30">
 
-    <label for="interest">Roční úrčení (% p.a.)</label>
+    <label for="interest">Roční úrčení (% p.a.)
+      <span class="tooltip" onclick="playMeow()">🐱
+        <span class="tooltip-text">
+          Zkratka p.a. pochází z latinského „per annum“, což znamená ročně. Používá se u úrokových sazeb.
+        </span>
+      </span>
+    </label>
     <input type="number" id="interest" placeholder="Např. 7" value="7">
 
     <button onclick="calculateCompoundInterest()">✅ Spočítat</button>
